# opam2nix

./: CHANGELOG.md  README.md  dune-project  opam2nix.opam
examples/custom-opam-deps/: Makefile  hello.opam
examples/custom-opam-deps/nix/: default.nix  opam-selection.nix
examples/dev-dependencies/: dune-project  hello.opam
examples/dev-dependencies/nix/: default.nix  opam-selection.nix
examples/simple/: Makefile  dune-project  hello.opam
examples/simple/nix/: default.nix  opam-selection.nix
nix/: api.nix  default.nix  opam2nix.nix
src/: cmd.ml  digest_cache.ml  digest_cache.mli  download.ml  dune  extract.ml  invoke.ml  main.ml  opam_metadata.ml  opam_metadata.mli  repo.ml  repo.mli  select.ml  solver.ml  tmp.ml
test_src/: dune
