(library
 (name opam2nix)
 (public_name opam2nix)
 (modules :standard \ main)
 (libraries
  curl
  curl.lwt
  dune-build-info
  fileutils
  lwt
  lwt.unix
  lwt_ppx
  opam-0install
  opam-state
  ppx_deriving_yojson.runtime
  str
  unix
  yojson)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving_yojson lwt_ppx)))

(executable
 (name main)
 (modules main)
 (public_name opam2nix)
 (libraries opam2nix))
