(library
 (name opam2nix)
 (public_name opam2nix)
 (modules :standard \ main)
 (libraries str unix yojson
   opam-state opam-0install
   lwt lwt.unix lwt_ppx curl curl.lwt
   fileutils dune-build-info)
 (preprocess (pps ppx_deriving ppx_deriving_yojson lwt_ppx))
)

(executable
 (name main)
 (modules main)
 (public_name opam2nix)
 (libraries opam2nix))
